// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`アクション情報 シート > 標準構成の出力が変化しない 1`] = `
{
  "headerIndex": [
    1,
  ],
  "rows": [
    [],
    [
      "",
      "アクション名",
      "アクションID",
      "Index",
      "コピー先アプリID",
      "コピー先アプリコード",
      "フィールドの関連付け",
      "利用者コード／利用者の種類",
      "実行条件",
    ],
    [
      "",
      "請求書作成",
      "1001",
      "0",
      "400",
      "INVOICE",
      "案件名->案件名,",
      "sales／GROUP
user1／USER",
      "ステータス種別 in ("完了")",
    ],
  ],
}
`;

exports[`アプリのアクセス権 シート > 標準構成の出力が変化しない 1`] = `
{
  "headerIndex": [
    1,
  ],
  "rows": [
    [],
    [
      "",
      "コード",
      "種類",
      "閲覧",
      "追加",
      "編集",
      "削除",
      "管理",
      "読込",
      "書出",
      "継承",
    ],
    [
      "",
      "Administrators",
      "GROUP",
      "■",
      "■",
      "■",
      "■",
      "■",
      "■",
      "■",
      "□",
    ],
    [
      "",
      "everyone",
      "GROUP",
      "■",
      "■",
      "■",
      "□",
      "□",
      "□",
      "□",
      "■",
    ],
  ],
}
`;

exports[`フィールド シート > 標準構成の出力が変化しない 1`] = `
{
  "headerIndex": [
    1,
  ],
  "rows": [
    [],
    [
      "",
      "フィールドコード",
      "フィールド名",
      "タイプ",
      "表示順",
      "テーブル",
      "グループ",
      "ラベル",
      "必須",
      "重複",
      "最大長",
      "最小長",
      "最大値",
      "最小値",
      "デフォルト値",
      "仕様",
    ],
    [
      "",
      "案件名",
      "案件名",
      "SINGLE_LINE_TEXT",
      0,
      "",
      "",
      "表示",
      "必須",
      "禁止",
      "100",
      "1",
      "",
      "",
      "",
      "計算フィールドの計算式を表示",
    ],
    [
      "",
      "金額",
      "金額",
      "NUMBER",
      1,
      "",
      "",
      "表示",
      "任意",
      "許可",
      "",
      "",
      "1000000",
      "0",
      "0",
      "桁区切りを表示,0,unit=円,unitPosition=AFTER",
    ],
    [
      "",
      "税込金額",
      "税込金額",
      "CALC",
      2,
      "",
      "",
      "表示",
      "任意",
      "許可",
      "",
      "",
      "",
      "",
      "",
      "expression=金額 * 1.1,計算フィールドの計算式を表示,NUMBER,0,unit=円,unitPosition=AFTER",
    ],
    [
      "",
      "ステータス種別",
      "ステータス種別",
      "RADIO_BUTTON",
      3,
      "",
      "",
      "表示",
      "必須",
      "許可",
      "",
      "",
      "",
      "",
      "進行中",
      "水平,options=[進行中,保留,完了]",
    ],
    [
      "",
      "担当者",
      "担当者",
      "USER_SELECT",
      4,
      "",
      "",
      "表示",
      "任意",
      "許可",
      "",
      "",
      "",
      "",
      "user1",
      "entities=[sales,user1]",
    ],
    [
      "",
      "顧客名",
      "顧客名",
      "SINGLE_LINE_TEXT",
      5,
      "",
      "",
      "表示",
      "任意",
      "許可",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "",
      "補足情報",
      "",
      "LABEL",
      6,
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "",
      "spacer1",
      "",
      "SPACER",
      7,
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "",
      "",
      "",
      "HR",
      8,
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "",
      "関連案件",
      "関連案件",
      "REFERENCE_TABLE",
      9,
      "",
      "",
      "表示",
      "任意",
      "許可",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "",
      "備考",
      "備考",
      "MULTI_LINE_TEXT",
      10,
      "",
      "",
      "非表示",
      "任意",
      "許可",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "",
      "社内情報",
      "",
      "GROUP",
      11,
      "",
      "社内情報",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "",
      "社内メモ",
      "社内メモ",
      "MULTI_LINE_TEXT",
      12,
      "",
      "社内情報",
      "表示",
      "任意",
      "許可",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "",
      "明細",
      "",
      "SUBTABLE",
      13,
      "明細",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  ],
}
`;

exports[`フィールドのアクセス権 シート > 標準構成の出力が変化しない 1`] = `
{
  "headerIndex": [
    1,
  ],
  "rows": [
    [],
    [
      "",
      "フィールド",
      "コード",
      "種類",
      "閲覧",
      "編集",
      "継承",
    ],
    [
      "",
      "金額",
      "sales",
      "GROUP",
      "■",
      "■",
      "□",
    ],
    [
      "",
      "金額",
      "everyone",
      "GROUP",
      "■",
      "□",
      "■",
    ],
    [
      "",
      "金額",
      "temp",
      "GROUP",
      "□",
      "□",
      "□",
    ],
  ],
}
`;

exports[`プロセス管理 シート > 標準構成の出力が変化しない 1`] = `
{
  "headerIndex": [
    1,
    7,
    8,
  ],
  "rows": [
    [],
    [
      "",
      "ステータス名",
      "作業者",
      "",
    ],
    [
      "",
      "未対応",
      "ONE",
      "",
    ],
    [
      "",
      "",
      "GROUP:sales",
      "",
    ],
    [
      "",
      "",
      "USER:user1",
      "継承しない",
    ],
    [
      "",
      "完了",
      "ALL",
      "",
    ],
    [],
    [
      "",
      "アクション",
      "実行前ステータス",
      "実行後ステータス",
    ],
    [
      "",
      "",
      "条件",
      "",
    ],
    [
      "",
      "対応する",
      "未対応",
      "完了",
    ],
    [
      "",
      "",
      "金額 > "0"",
      "",
    ],
  ],
}
`;

exports[`ルックアップ情報 シート > 標準構成の出力が変化しない 1`] = `
{
  "headerIndex": [
    1,
  ],
  "rows": [
    [],
    [
      "",
      "フィールドコード",
      "コピー元アプリID",
      "コピー元アプリコード",
      "コピー元のフィールド",
      "ほかのフィールドのコピー",
      "表示フィールド",
      "絞り込み",
      "ソート",
    ],
    [
      "",
      "顧客名",
      "200",
      "CUSTOMER",
      "顧客コード",
      "顧客住所->住所,顧客電話番号->電話番号",
      "顧客コード,顧客名",
      "状態 in ("有効")",
      "顧客コード asc",
    ],
  ],
}
`;

exports[`レコードのアクセス権 シート > 標準構成の出力が変化しない 1`] = `
{
  "headerIndex": [
    1,
  ],
  "rows": [
    [],
    [
      "",
      "コード",
      "絞り込み",
      "種類",
      "閲覧",
      "編集",
      "削除",
      "継承",
    ],
    [
      "",
      "sales",
      "ステータス種別 in ("完了")",
      "GROUP",
      "■",
      "□",
      "□",
      "■",
    ],
  ],
}
`;

exports[`一般情報 シート > 標準構成の出力が変化しない 1`] = `
{
  "headerIndex": [
    1,
  ],
  "rows": [
    [
      "",
      "一般情報",
    ],
    [],
    [
      "",
      "項目",
      "値",
    ],
    [
      "",
      "ドメイン",
      "example.cybozu.com",
    ],
    [
      "",
      "アプリ名",
      "サンプル案件管理",
    ],
    [
      "",
      "アプリID",
      "123",
    ],
    [
      "",
      "アプリの説明",
      "案件の進捗を管理するアプリ",
    ],
  ],
}
`;

exports[`一覧 シート > 標準構成の出力が変化しない 1`] = `
{
  "headerIndex": [
    1,
  ],
  "rows": [
    [],
    [
      "",
      "一覧名",
      "Index",
      "タイプ",
      "表示フィールド",
      "絞込条件",
      "ソート条件",
      "その他",
    ],
    [
      "",
      "一覧",
      "0",
      "LIST",
      "案件名,金額,ステータス種別",
      "ステータス種別 not in ("保留")",
      "レコード番号 desc",
      "id=10",
    ],
    [
      "",
      "カレンダー",
      "1",
      "CALENDAR",
      "",
      "",
      "レコード番号 desc",
      "id=20",
    ],
  ],
}
`;

exports[`自動計算情報 シート > 標準構成の出力が変化しない 1`] = `
{
  "headerIndex": [
    1,
  ],
  "rows": [
    [],
    [
      "",
      "対象フィールド名",
      "フィールドコード",
      "自動計算式",
    ],
    [
      "",
      "税込金額",
      "税込金額",
      "金額 * 1.1",
    ],
  ],
}
`;

exports[`関連レコード情報 シート > 標準構成の出力が変化しない 1`] = `
{
  "headerIndex": [
    1,
  ],
  "rows": [
    [],
    [
      "",
      "フィールドコード",
      "参照先アプリID",
      "参照先アプリコード",
      "フィールド",
      "参照先のフィールド",
      "表示フィールド",
      "絞り込み",
      "ソート",
    ],
    [
      "",
      "関連案件",
      "300",
      "DEAL",
      "顧客名",
      "顧客名",
      "案件名,金額",
      "状態 not in ("削除")",
      "レコード番号 desc",
    ],
  ],
}
`;
